# PET-FM-Probe-Contamination

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  data_dictionary.md  pyproject.toml
data/: README.md
docs/: reproduction_guide.md
notebooks/: 00_diagnostic.py  01_suv_smoke_test.py  02_t7_dose_investigation.py  03_t7_t9_verification.py  04_t7_scan_id_reconstruction.py  05_checkpoint_manifest.py  06_task_splits.py  07_philips_anomaly_investigation.py  07a_fmcib_manifest.py  07b_ct_fm_manifest.py  07c_biomedclip_caption_scan.py  08_contamination_intersection.py  08_hecktor_random_init_multiseed.py  08_random_init_multiseed.py  08_t1_random_init_multiseed.py  08_t5_random_init_multiseed.py  09_within_patient_test.py  10_contamination_freeze.py  11_pyradiomics_baseline.py  12_ctfm_signflip_sensitivity.py  13_fmcib_saturation_diagnostic.py  NOTEBOOKS_README.md  calibration_inference.py  calibration_inference_t4_fix.py  enumerate_autopet_iii_serial_pairs.py  hecktor_01_preprocess_v3.py  hecktor_02_embeddings.py  manuscript_figures_all.ipynb  manuscript_figures_all.py  probe_analysis.py  t1_01_preprocess_v3.py  t1_02_embeddings.py  t4_01_preprocess.py  t4_01_preprocess_v3.py  t4_02_embeddings.py  t5_01_preprocess_v3.py  t5_02_embeddings.py  t6_01_preprocess.py  t6_01_preprocess_v3.py  t6_02_embeddings.py  (+10 more)
outputs/calibration/: calibration_results.csv  cox_calibration_t3.parquet  cox_calibration_t4.parquet  reliability_bins_t1.parquet  reliability_bins_t5.parquet  reliability_bins_t7.parquet
scripts/: compute_calibration.py  render_efigure_6.py
(+6 files in other folders)
