[project]
name = "pet-fm-bench"
version = "0.2.0"
description = "PET-FM-Bench: Cross-Foundation-Model Benchmark on Nuclear-Medicine Tasks with Systematic Pretraining Contamination Audit"
authors = [{ name = "Hayden Farquhar", email = "hayden.farquhar@icloud.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # Core ML
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "timm>=0.9",

    # Medical imaging
    "monai>=1.3",
    "SimpleITK>=2.3",
    "pydicom>=2.4",
    "pyradiomics>=3.1",
    "dcm2niix",

    # Foundation models
    "foundation-cancer-image-biomarker",

    # Probes and statistics
    "scikit-learn>=1.4",
    "scikit-survival>=0.22",
    "lifelines>=0.28",

    # Data and viz
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # TCIA download
    "tcia-utils>=1.0",

    # Utilities
    "tqdm>=4.66",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "ipykernel>=6.29",
]
kaggle = [
    # Lighter deps for Kaggle notebooks
    "torch>=2.2",
    "transformers>=4.40",
    "timm>=0.9",
    "monai>=1.3",
    "SimpleITK>=2.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "huggingface-hub>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
